--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,21 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
+
+<!--	добавлены модули-->
+<modules>
+	<module>stats</module>
+	<module>main-service</module>
+</modules>
+
+	<dependencies>
+		<!--	добавлены зависимости-->
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-actuator</artifactId>
+	</dependency>
+	</dependencies>
+
 	<properties>
 		<java.version>11</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
