--- a/stats/stats-server/pom.xml
+++ b/stats/stats-server/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
@@ -14,15 +14,15 @@
     <groupId>ru.practicum</groupId>
     <artifactId>stats-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-<!--    <packaging>pom</packaging>-->
+    <!--    <packaging>pom</packaging>-->
 
-<!--<repositories>-->
-<!--    <repository>-->
-<!--        <id>maven2</id>-->
-<!--        <name>statsDto</name>-->
-<!--        <url>../stats-dto/target/</url>-->
-<!--    </repository>-->
-<!--</repositories>-->
+    <!--<repositories>-->
+    <!--    <repository>-->
+    <!--        <id>maven2</id>-->
+    <!--        <name>statsDto</name>-->
+    <!--        <url>../stats-dto/target/</url>-->
+    <!--    </repository>-->
+    <!--</repositories>-->
 
     <build>
         <plugins>
@@ -91,5 +91,5 @@
         </dependency>
     </dependencies>
 
-    
+
 </project>
