--- a/stats/stats-client/pom.xml
+++ b/stats/stats-client/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
@@ -15,7 +15,7 @@
     <groupId>ru.practicum</groupId>
     <artifactId>stats-client</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-<!--    <packaging>pom</packaging>-->
+    <!--    <packaging>pom</packaging>-->
 
     <dependencies>
         <dependency>
@@ -40,5 +40,4 @@
     </dependencies>
 
 
-    
 </project>
