--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 logging.level.org.springframework.web.client.RestTemplate=DEBUG
-#logging.level.org.apache.http=DEBUG
-#logging.level.httpclient.wire=DEBUG
+logging.level.org.apache.http=DEBUG
+logging.level.httpclient.wire=DEBUG
 server.port=8080
-stats-server.url=http://localhost:9090
+stats-server.url=http://ewm-stats-server:9090
+#stats-server.url=http://localhost:9090
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.properties.hibernate.format_sql=true
@@ -10,11 +11,11 @@ spring.sql.init.mode=always
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/ewm
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 #---
-spring.config.activate.on-profile=ci,test
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:ewm
-spring.datasource.username=test
-spring.datasource.password=test
+#spring.config.activate.on-profile=ci,test
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:ewm
+#spring.datasource.username=test
+#spring.datasource.password=test
