--- a/stats/stats-server/pom.xml
+++ b/stats/stats-server/pom.xml
@@ -34,6 +34,13 @@
     </build>
 
     <dependencies>
+<!-- -&#45;&#45;&#45;&#45;-->
+        <dependency>
+            <groupId>ru.practicum</groupId>
+            <artifactId>stats-client</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+<!--&#45;&#45;&#45;&#45;-->
 
         <dependency>
             <groupId>ru.practicum</groupId>
